[package]
name = "axum_hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
axum = { version = "0.6.12", features = ["macros", "headers"] }
hyper = { version = "1.2.0", features = ["full"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors"] }
validator = { version = "0.17.0", features = ["derive"] }

[dev-dependencies]
cargo-watch = "8.5.2"



